--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,14 @@
                   <option>5</option>
                 </select>
               </div>
+              <button onclick="Changeurn()" id="change">поменять на принтер</button>
           </div>
         <div class="col-sm-12 fill">
             <div id="forgeViewer"></div>
           </div>
     </div>
     </div>
+    
 </body>
 
 </html>
