--- a/public/forge-viewer.html
+++ b/public/forge-viewer.html
@@ -53,8 +53,8 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
+        <label for="exampleFormControlSelect1">Тип кулера</label>
+        <select class="form-control" id="coolerSelect" onchange="selectCoolerf(this);">
           <option>1</option>
           <option>2</option>
           <option>3</option>
